Fix watchlist btn on mobile for real

--- a/style.css
+++ b/style.css
@@ -287,13 +287,10 @@ a:focus {
 }
 
 @media (max-width: 650px) {
-    .remove-watchlist-btn {
-        width: 100%;
-        max-width: 77px;
-    }
+    .remove-watchlist-btn,
     .watchlist-btn {
+        text-align: left;
         width: 100%;
-        max-width: 83px;
     }
 }
 .card-watchlist:hover,
